test_suite5/ALAN/test_suite/alan-2022-examples/failing/007340_mutation.alan
source Gq begin put "\"" put "" . "5" end
